--- a/env.example
+++ b/env.example
@@ -1,14 +1,1 @@
-# Article Scout Environment Variables
-# Copy this file to .env and fill in your actual values
-
-# Groq API Key (required)
-# Get your API key from: https://console.groq.com/
-GROQ_API_KEY=your_groq_api_key_here
-
-# Optional: Custom API settings
-# GROQ_MODEL=llama-3.1-8b-instant
-# GROQ_TEMPERATURE=0.3
-
-# Optional: PDF extraction settings
-# MAX_TOKENS=5000
-# MAX_INPUT_CHARS=5000 
+GROQ_API_KEY = your_groq_api_key_here
