--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "article-scout"
 version = "0.1.0"
-description = "Add your description here"
+description = "Research Paper Evaluator for TCC - A tool to evaluate research papers for relevance to Final Project themes"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -11,7 +11,38 @@ dependencies = [
     "langgraph>=0.5.1",
     "pdfminer-six>=20250506",
     "pypdf2>=3.0.1",
+    "pymupdf>=1.23.0",
     "pytest>=8.4.1",
     "python-dotenv>=1.1.1",
     "streamlit>=1.46.1",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.4.1",
+    "black>=24.1.1",
+    "isort>=5.13.2",
+    "flake8>=7.0.0",
+    "pre-commit>=3.6.0",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/article_scout"]
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
+
+[tool.isort]
+profile = "black"
+line_length = 88
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
